--- a/app/views/posts/_write_post.haml
+++ b/app/views/posts/_write_post.haml
@@ -22,7 +22,7 @@
     = f.label :tag_ids, 'Tags:'
     = f.select :tag_ids, options_from_collection_for_select(@tags, :id, :name, post.tag_ids || post.post_tags.map(&:tag_id)), {}, {multiple: true}
     - if post.id.present? && !post.editable_by?(current_user)
-      = submit_tag 'Save', class: 'button', id: 'submit_button', disable_with: 'Saving...'
+    = submit_tag 'Save', class: 'button', id: 'submit_button', disable_with: 'Saving...'
     - else
       %hr
       .view-button#rtf{class: ('selected' if current_user.default_editor == 'rtf')} Rich Text
@@ -36,7 +36,9 @@
       %br
       #post-form-wrapper
         = f.text_area :content, class: 'tinymce'
-        = tinymce
+        - tinymce_params = {}
+        - tinymce_params[:body_class] = 'tinymce_dark' if current_user.layout == 'starrydark' || current_user.layout == 'dark'
+        = tinymce tinymce_params
         = f.hidden_field :character_id, id: 'reply_character_id'
         = f.hidden_field :icon_id, id: 'reply_icon_id'
         = submit_tag (method == :put ? 'Save' : "Post"), class: 'button', id: 'submit_button', disable_with: 'Saving...'
