--- a/public/stylesheets/tinymce.css
+++ b/public/stylesheets/tinymce.css
@@ -1,4 +1,8 @@
 body {
-    font-family: Helvetica, sans-serif;
-    font-size: 14px;
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
+}
+body.tinymce_dark {
+  background-color: #4D4B5B;
+  color: #DADADA;
 }
