--- a/app/views/posts/_write_post.haml
+++ b/app/views/posts/_write_post.haml
@@ -25,6 +25,8 @@
     - unless post.id.present? && !post.editable_by?(current_user)
       .view-button#rtf{class: ('selected' if current_user.default_editor == 'rtf')} Rich Text
       .view-button#html{class: ('selected' if current_user.default_editor == 'html')} HTML
+      .view-button#markup-allowed{title: "Toggle RTF editor and HTML editor\nAllowed tags: #{Glowfic::ALLOWED_TAGS.sort * ', '}"} ?
+      - # title gets overridden by JS
     = f.label :subject, 'Subject:'
     = f.text_field :subject, placeholder: 'Subject'
     %br
@@ -41,6 +43,18 @@
         = f.hidden_field :icon_id, id: 'reply_icon_id'
         = submit_tag (method == :put ? 'Save' : "Post"), class: 'button', id: 'submit_button', disable_with: 'Saving...'
         = submit_tag "Preview", class: 'button', id: 'preview_button', name: 'button_preview'
+      %br
+      #markup-allowed-box{style: 'display:none'}
+        %b Allowed tags in the HTML editor:
+        = Glowfic::ALLOWED_TAGS.sort * ', '
+        %br
+        %br
+        %b Allowed attributes:
+        - Glowfic::ALLOWED_TAG_ATTRIBUTES.each do |tag_name, attrs|
+          = succeed ':' do
+            %b= tag_name
+          = attrs * ', '
+          %br
 
 - if post.id.present? && !post.editable_by?(current_user)
   #post-editor.padding-10= yield :form
