--- a/app/views/posts/_list.haml
+++ b/app/views/posts/_list.haml
@@ -11,6 +11,10 @@
     %tr
       %th{colspan: col_count}= content_for :posts_title
     %tr
+      %th.sub{colspan: col_count, style: 'padding: 0;'}
+        - if posts.methods.include?(:total_pages) && posts.total_pages > 1
+          = render partial: 'posts/paginator', locals: { paginated: posts, path: (local_assigns[:path] || :posts_path), compact: true, hide_total: true }
+    %tr
       %th.sub.width-15
       %th.sub Thread
       - unless local_assigns[:hide_continuity]
@@ -32,4 +36,4 @@
   - if posts.methods.include?(:total_pages) && posts.total_pages > 1
     %tfoot
       %tr
-        %td{colspan: col_count}= render partial: 'posts/paginator', locals: { paginated: posts, path: (local_assigns[:path] || :posts_path) }
+        %td{colspan: col_count}= render partial: 'posts/paginator', locals: { paginated: posts, path: (local_assigns[:path] || :posts_path), compact: true }
