Fix styling with various themes and the new compact paginator

--- a/app/assets/stylesheets/layouts/dark.css
+++ b/app/assets/stylesheets/layouts/dark.css
@@ -54,3 +54,4 @@ body { color: #A2A2A2; }
 }
 .view-button.selected { background-color: #6A6A6A; }
 .link-box { color: #DDDDDD; }
+#content .paginator.paginator-compact { border-bottom: none; }
