--- a/app/assets/stylesheets/layouts/starry.css
+++ b/app/assets/stylesheets/layouts/starry.css
@@ -42,3 +42,4 @@ a:visited { color: #484357; }
 .pagination a { color: #F3F3F3; }
 .pagination a:visited { color: #9c9aa4; }
 .pagination .disabled { color: #58546b; }
+#content .paginator.paginator-compact { border-bottom: none; }
