--- a/app/assets/stylesheets/layouts/starrydark.css
+++ b/app/assets/stylesheets/layouts/starrydark.css
@@ -31,6 +31,7 @@
 .pagination a { color: #F3F3F3; }
 .pagination a:visited { color: #9c9aa4; }
 .pagination .disabled { color: #58546b; }
+#content .paginator.paginator-compact { border-bottom: none; }
 
 body { background-color: #211e2f; color: #DADADA; }
 #content th.subber { color: #DADADA; }
