--- a/app/views/reports/_monthly.haml
+++ b/app/views/reports/_monthly.haml
@@ -7,7 +7,7 @@
   - 1.upto(1.month.ago.end_of_month.day) do |num_days|
     - day = 1.month.ago.end_of_month - (num_days - 1).days
     - posts = posts_from_relation(Post.where(tagged_at: day.beginning_of_day .. day.end_of_day))
-    - if posts.present?
+    - if posts.any? {|post| post.visible_to?(current_user)}
       %tbody
         %tr
           %th.subber{colspan: 6}= day.strftime("%b %d, %Y")
