--- a/app/views/posts/show.haml
+++ b/app/views/posts/show.haml
@@ -159,9 +159,9 @@
   - if @post.author_ids.include?(current_user.id) || (!@post.authors_locked? && !@reply.content.nil?)
     = render partial: 'posts/write_reply', locals: { reply: @reply, url: replies_path, method: :post }
   - elsif !@post.authors_locked?
-    .post-expander
-      .info + Join Thread
-      .hidden
-        = render partial: 'posts/write_reply', locals: { reply: @reply, url: replies_path, method: :post }
+    .post-expander{data: {expander_text: '+ Join Thread'}}
+      .noexpand.padding-10
+        %b Join Thread
+      = render partial: 'posts/write_reply', locals: { reply: @reply, url: replies_path, method: :post }
 
 .centered.margin-10= link_to 'Back to Top', '#'
