Check visible_to? in posts_from_relation

--- a/app/views/posts/_list.haml
+++ b/app/views/posts/_list.haml
@@ -26,7 +26,7 @@
     - posts.each do |post|
       - next unless post.visible_to?(current_user)
       = render partial: 'posts/list_item', locals: {post: post}.merge(post_args)
-    - unless (posts.methods.include?(:total_pages) && posts.total_pages > 1) || posts.any? {|post| post.visible_to?(current_user)}
+    - if posts.empty?
       %tr
         %td.centered.padding-10.no-posts{ class: cycle('even','odd'), colspan: col_count } — No posts yet —
   - if posts.methods.include?(:total_pages) && posts.total_pages > 1
