--- a/app/views/posts/search.haml
+++ b/app/views/posts/search.haml
@@ -9,7 +9,7 @@
       %th.width-150
         Browse Posts
         - if @search_results
-          = '- '+@search_results.total_entries.to_s+' results'
+          = '- '+ pluralize(@search_results.total_count, 'result')
       %th
         - if @search_results
           = render partial: 'paginator', locals: {paginated: @search_results, path: :search_posts_path}
