--- a/app/views/posts/_paginator.haml
+++ b/app/views/posts/_paginator.haml
@@ -2,14 +2,12 @@
   - unless browser.device.mobile?
     .left-align
       Total:
-      %span.reply-count=paginated.total_entries
+      %span.reply-count=paginated.total_count
     .right-align
       - if paginated.klass == Reply && !local_assigns[:no_per]
         Posts Per Page:
         = select_tag :per_page, per_page_options, class: 'per-page'
   .pagination
-    - if paginated.total_entries > paginated.per_page
-      - args = {container: false, params: @paginate_params || {}, first_label: "&laquo; First", last_label: "Last &raquo", summary_label: "%d of %d"}
-      - args[:mobile_view] = browser.device.mobile?
-      = will_paginate paginated, args
+    - if paginated.total_count > paginated.limit_value
+      = paginate paginated, mobile_view: browser.device.mobile?, params: @paginate_params || {}
   .clear
