--- a/app/views/replies/search.haml
+++ b/app/views/replies/search.haml
@@ -9,7 +9,7 @@
       %th.width-150
         Search Replies
         - if @search_results
-          = '- '+@search_results.total_entries.to_s+' results'
+          = '- '+ pluralize(@search_results.total_count, 'result')
       %th
         - if @search_results
           = render partial: 'posts/paginator', locals: {paginated: @search_results, path: :search_replies_path, no_per: true}
