--- a/app/views/tags/index.haml
+++ b/app/views/tags/index.haml
@@ -22,6 +22,6 @@
           - if tag.editable_by?(current_user)
             = link_to edit_tag_path(tag) do
               = image_tag "/images/pencil.png"
-            = link_to tag_path(tag), method: :delete, confirm: 'Are you sure you want to delete '+tag.name+'?' do
+            = link_to tag_path(tag), method: :delete, data: { confirm: 'Are you sure you want to delete '+tag.name+'?' } do
               = image_tag "/images/cross.png"
             &nbsp;
