--- a/app/views/galleries/new.haml
+++ b/app/views/galleries/new.haml
@@ -1,19 +1,21 @@
 = form_for @gallery, url: galleries_path, method: :post do |f|
-  %table.form-table
+  - icons_present = current_user.galleryless_icons.present?
+  %table.form-table{style: (icons_present ? 'width: 100%;' : nil)}
     %tr
       %th.centered{colspan: 2}New Gallery
     %tr
       %th.vtop.sub Name
       %td.even= f.text_field :name, placeholder: "Gallery Name", class: 'text'
-    %tr
-      %th.vtop.sub Icons
-      %td.odd
-        - current_user.galleryless_icons.each do |icon|
-          = label_tag "gallery_icon_ids_#{icon.id}" do
-            .gallery-icon
-              = icon_tag icon, id: icon.id, pointer: true
-              %br>
-              %span.icon-keyword= icon.keyword
-              .select-button= check_box_tag "gallery[icon_ids][]", icon.id, false, id: "gallery_icon_ids_#{icon.id}"
+    - if icons_present
+      %tr
+        %th.vtop.sub Icons
+        %td.odd
+          - current_user.galleryless_icons.each do |icon|
+            = label_tag "gallery_icon_ids_#{icon.id}" do
+              .gallery-icon
+                = icon_tag icon, id: icon.id, pointer: true
+                %br>
+                %span.icon-keyword= icon.keyword
+                .select-button= check_box_tag "gallery[icon_ids][]", icon.id, false, id: "gallery_icon_ids_#{icon.id}"
     %tr
       %th.subber{colspan: 2}= submit_tag "Create", class: 'button'
