--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,89 +31,97 @@
 
     = include_gon
   %body
-    #header
-      - if logged_in?
-        #user-info
-          = link_to user_path(current_user) do
-            - if current_user.avatar
-              = image_tag current_user.avatar.url, class: 'icon', id: 'user-icon'
-              %br
-            - else
-              .no-img
-            #username= current_user.username
-      #header-right
-        #logo
-          - unless logged_in?
-            #header-links
-              = link_to "Login", login_path
-              %span &nbsp;|&nbsp;
-              = link_to "Sign up", new_user_path
-          = link_to root_path do
+    #wrapper
+      / Navigation
+      %nav.navbar.navbar-default.navbar-static-top{:role => "navigation", :style => "margin-bottom: 0"}
+        .navbar-header
+          %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{:href => root_path}
             = image_tag '/images/logo.png', alt: 'Glowfic Constellation'
-        #nav-top
-          - if logged_in?
-            %ul
-              %li= link_to 'Account', edit_user_path(current_user)
-              %li= link_to 'Inbox', messages_path
-              %li= link_to "Characters", user_characters_path(current_user)
-              %li= link_to "Galleries", user_galleries_path(current_user)
-              %li= link_to 'Favorites', favorites_path
-              %li= link_to "Post", new_post_path
-            = link_to logout_path, method: :delete, id: :"header-logout" do
-              = button_tag "Log out", class: 'button'
-          - else
-            = form_tag login_path, method: :post do
-              #header-forms
-                = text_field_tag :username, params[:username], placeholder: "Username"
-                = password_field_tag :password, params[:password], placeholder: "Password"
-              #header-remember
-                = check_box_tag :remember_me
-                Remember Me
-              #header-buttons
-                = submit_tag "Log in", class: 'button'
-                = link_to "Sign up", new_user_path
-                &nbsp;|&nbsp;
-                = link_to "Forgot Password?", new_password_reset_path
-      #header-collapse
-      #nav-bottom
-        %ul
-          %li= link_to 'Continuities', boards_path
-          %li= link_to 'Recently Updated', posts_path
-          %li= link_to 'Search', search_posts_path
-          %li= link_to 'Glowficcers', users_path
-          %li= link_to 'Facecasts', facecasts_characters_path
-          - if logged_in?
-            %li= link_to 'Unread', unread_posts_path
-            %li= link_to 'Tags Owed', owed_posts_path
-          %li= link_to 'Contribute', contribute_path
-    - if content_for?(:breadcrumbs)
-      .flash.subber= content_for :breadcrumbs
-    - if flash[:error].is_a?(Hash)
-      .flash.error
-        - if flash[:error].has_key? :image
-          = image_tag flash[:error][:image], class: 'vmid'.freeze
-        = flash[:error][:message]
-        - if flash[:error].has_key? :array
-          %ul
-            - flash[:error][:array].each do |error|
-              %li= error
-      - flash.delete(:error)
-    - flash.keys.each do |key|
-      - if key == :pass
-        .flash{class: 'error'.freeze}= flash[key].html_safe
-      - else
-        .flash{:class=>key}= flash[key]
-    - if content_for?(:flashes)
-      = content_for :flashes
-    - if logged_in?
-      - if current_user.messages.where(unread: true).exists?
-        - current_user.messages.where(unread: true).each do |message|
-          .flash.inbox
-            New message from
-            = link_to message.sender.username, user_path(message.sender)
-            &ndash;
-            = link_to message.unempty_subject, message_path(message)
-    #content= yield
+
+        -if logged_in?
+          %ul.nav.navbar-top-links.navbar-right
+            %li.dropdown
+              %a.dropdown-toggle{:href => messages_path}
+                %i.fa.fa-envelope.fa-fw
+
+            %li.dropdown
+              %a.dropdown-toggle{:href => user_characters_path(current_user)}
+                %i.fa.fa-users.fa-fw
+
+            %li.dropdown
+              %a.dropdown-toggle{:href => user_galleries_path(current_user)}
+                %i.fa.fa-picture-o.fa-fw
+
+            %li.dropdown
+              %a.dropdown-toggle{:href => new_post_path}
+                %i.fa.fa-pencil-square-o.fa-fw
+
+            %li.dropdown
+              %a.dropdown-toggle{:href => favorites_path}
+                %i.fa.fa-star.fa-fw
+
+            %li.dropdown
+              %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+                %i.fa.fa-cog.fa-fw
+                %i.fa.fa-caret-down
+              %ul.dropdown-menu.dropdown-user
+                %li
+                  %a{:href => edit_user_path(current_user)}
+                    %i.fa.fa-user.fa-fw
+                    Account
+                %li.divider
+                %li
+                  = link_to logout_path, method: :delete, id: :"header-logout" do
+                    %i.fa.fa-sign-out.fa-fw
+                    Logout
+
+          .navbar-default.sidebar{:role => "navigation"}
+            .sidebar-nav.navbar-collapse
+              %ul#side-menu.nav
+                %li.sidebar-search
+                  .input-group.custom-search-form
+                    %input.form-control{:placeholder => "Search...", :type => "text"}/
+                    %span.input-group-btn
+                      %button.btn.btn-default{:type => "button"}
+                        %i.fa.fa-search
+
+                %li
+                  %a{:href => boards_path}
+                    %i.fa.fa-globe.fa-fw
+                    Continuities
+                %li
+                  %a{:href => posts_path}
+                    %i.fa.fa-pencil-square-o.fa-fw
+                    Recently Updated
+                %li
+                  %a{:href => users_path}
+                    %i.fa.fa-users.fa-fw
+                    Glowficcers
+                %li
+                  %a{:href => facecasts_characters_path}
+                    %i.fa.fa-smile-o.fa-fw
+                    Facecasts
+                %li
+                  %a{:href => unread_posts_path}
+                    %i.fa.fa-envelope-open.fa-fw
+                    Unread
+                %li
+                  %a{:href => owed_posts_path}
+                    %i.fa.fa-tags.fa-fw
+                    Tags Owed
+                %li
+                  %a{:href => contribute_path}
+                    %i.fa.fa-money.fa-fw
+                    Contribute
+
+      #page-wrapper
+        .container-fluid
+        #content= yield
 
   = javascript_include_tag 'application'.freeze
   - (@javascripts || []).each do |javascript|
